--- a/resources/css/themes/vertical-modern-menu-template/style.css
+++ b/resources/css/themes/vertical-modern-menu-template/style.css
@@ -5923,7 +5923,7 @@ li.home:before {
     background: -webkit-linear-gradient(45deg, #303f9f, #7b1fa2) !important;
     background: -moz- oldlinear-gradient(45deg, #303f9f, #7b1fa2) !important;
     background: -o-linear-gradient(45deg, #303f9f, #7b1fa2) !important;
-    background: linear-gradient(45deg, #c21b23, #abaaab) !important;
+    background: #842322 !important;
     /* background: linear-gradient(45deg, #303f9f, #7b1fa2) !important; */
 }
 
